welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: not found: value prendreBiscuit
prendreBiscuit()//etape 2
^