welcome.lessons.welcome.variables.Variables.scala.code
var nbPas : Int=0
while (!estSurBiscuit()){
  avance()
  nbPas=nbPas+1;
} // etape 1
prendreBiscuit()//etape 2
var dejaFait : Int=0
while (dejaFait!=nbPas){
  recule()
  dejaFait=dejaFait+1
}//etape3
poseBiscuit()